Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29878

Galera test failure on MDEV-26575

    XMLWordPrintable

Details

    Description

      galera.MDEV-26575 'innodb'               w1 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2022-10-26 08:35:01
      line
      Attempting backtrace. You can use the following information to find out
      ^ Found warnings in /home/jan/mysql/10.4/mysql-test/var/1/log/mysqld.2.err
      ok
       
       - saving '/home/jan/mysql/10.4/mysql-test/var/1/log/galera.MDEV-26575-innodb/' to '/home/jan/mysql/10.4/mysql-test/var/log/galera.MDEV-26575-innodb/'
      

      Attachments

        1. grastate.dat
          0.1 kB
        2. tc.log
          24 kB
        3. MDEV-26575.log
          0.4 kB
        4. mysqld.1.err
          407 kB
        5. mysqld.2.err
          402 kB

        Activity

          People

            sciascid Daniele Sciascia (Inactive)
            jplindst Jan Lindström (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1.25d
                1.25d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.