sql/wsrep_mysqld.h
@@ -90,6 +90,7 @@ extern bool        wsrep_new_cluster;
 extern bool        wsrep_gtid_mode;
 extern uint32      wsrep_gtid_domain_id;
 extern ulonglong   wsrep_mode;
+extern std::atomic <bool > wsrep_thread_create_failed;
 extern my_bool     wsrep_strict_ddl;
 
 enum enum_wsrep_reject_types {
